# game-of-life-hs

./: .gitignore  LICENSE  README.md  game-of-life.cabal
src/: Main.hs
