name:                game-of-life
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mlyean/game-of-life-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Lim Ming Yean
maintainer:          example@example.com
copyright:           2020 Lim Ming Yean
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable game-of-life
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.6
                     , colour >= 2.3
                     , gloss >= 1.13
                     , random >= 1.1
